# dank-bank

./: .gitignore  Makefile  README.md  interfaces.py  main.py  pyproject.toml  requirements.txt
src/: README.md  __init__.py  controllers.py  interfaces.py  json.py  models.py
src/debug/: __init__.py
src/models/: __init__.py  konto.py  kunde.py
src/schema/: __init__.py  base.py  registry.py
src/storage/: __init__.py  abstract.py  controllers.py  exc.py  json.py  models.py  root_types.pyi  storage.py  storage.pyi
src/storage/datastores/json/: encoder.py
src/storage/datastores/sql/: __init__.py  sql.py
src/storage/json/: adapter.py  datastore.py  decoder.py
src/storage/managers/: __init__.py  base.py  base.pyi  json.py  mixin.py  mixin.pyi  sql.py
src/storage/models/: konto.py  kunde.py
src/storage/sql/: __init__.py  adapter.py  datastore.py  types.py
src/storage/utils/: __init__.py  hybrid.py
src/ui/: __init__.py  base.py  gui.py  tui.py
src/ui/gui/: __init__.py  gui.py  state.py  widgets.py
src/utils/: __init__.py  hybrid.py
tests/: conftest.py
tests/unit/: test_manager.py  test_sql.py  test_ui.py
