[tool.poetry]
name = "dank_bank"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.19"
python-dateutil = "^2.8.1"
bcrypt = "^3.2.0"
colorama = "^0.4.4"
drizm-commons = {extras = ["sqla"], version = "^0.5.0"}

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
